--- a/package.json
+++ b/package.json
@@ -31,5 +31,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/svetanti/react-mesto-auth.git"
+  },
+  "homepage": "."
 }
