--- a/package.json
+++ b/package.json
@@ -41,5 +41,5 @@
     "type": "git",
     "url": "git+https://github.com/svetanti/react-mesto-auth.git"
   },
-  "homepage": "."
+  "homepage": "https://svetanti.github.io/react-mesto-auth/"
 }
